--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,17 +11,19 @@
     <h1>Login</h1>
     <% if(messages.error) { %>
         <%= messages.error %>
-    <% } %>    
-    <div>
-        <label for="email">Email</label>
-        <input type="email"name="email" id="email" email="email">
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" password="password">
-    </div>
-    <button type="submit">Login</button>
-    </form>
+    <% } %>
+    
+    <form method="post" action="/login"> <!-- Add the form element -->
+        <div>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" email="email">
+        </div>
+        <div>
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" password="password">
+        </div>
+        <button type="submit">Login</button>
+    </form> <!-- Close the form element -->
 
     <a href="/register">Register</a>
 </body>
